# fastapi-api-rest-template

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: dependencies.py  errors.py  security.py
app/api/v1/: main.py
app/api/v1/routes/auth/: auth_repository.py  auth_routes.py  auth_schemas.py
app/api/v1/routes/users/: users_repository.py  users_routes.py  users_schemas.py
app/database/: database_repository.py  session.py
app/database/models/: token.py  user.py
app/database/scripts/: check_active_database.py  delete_all_database.py  initial_data.py
scripts/: pre_start_alembic.sh  start_dev.sh  start_pro.sh
tests/: conftest.py
tests/api/routes/auth/: test_login.py
tests/api/routes/users/: test_create_new_user.py  test_delete_user_by_username.py  test_delete_user_me.py  test_get_user_by_username.py  test_get_user_me.py  test_get_users.py  test_update_user_by_username.py  test_update_user_me.py
tests/repository/auth/: test_authenticate.py
tests/repository/users/: test_create_user.py  test_delete_user.py  test_search_user_by_email.py  test_search_user_by_user_id.py  test_search_user_by_username.py  test_search_users.py  test_update_user.py
tests/utils/: user.py  utils.py
